--- a/app/src/main/res/layout/fragment_add_edit_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_note.xml
@@ -166,6 +166,16 @@
             app:layout_constraintTop_toBottomOf="@+id/et_title" />
 
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_editnotes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="Add new note"
+            app:srcCompat="@drawable/ic_save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
