--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -13,6 +13,8 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:id="@+id/rv_notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
