--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -8,6 +8,8 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="8dp"
+        android:id="@+id/item_container"
         android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
